--- a/Code/evaluate_config.json
+++ b/Code/evaluate_config.json
@@ -1,14 +1,14 @@
 {
     "dataset": "CIFAR10",
     "model": "ConvNet",
-    "method": "IDM",
-    "ipc": "fullat",
+    "method": "BACON",
+    "ipc": "50",
     "dsa_strategy": "color_crop_cutout_flip_scale_rotate",
     "syn_ce": true,
     "ce_weight": 1,
     "aug": false,
-    "load_file": "/home/node/BACON/Code/evaluation/model_pool/IDM/AT/IDM_ConvNet_CIFAR10_fullat_None_0.7367.pth",
-    "save_path": "/home/node/BACON/Code/evaluation/model_pool/IDM/AT/",
+    "load_file": "./model_pool/BACON/BACON_ConvNet_CIFAR10_50_None.pth",
+    "save_path": "./model_pool/BACON/",
     "train_attack": "None",
     "test_attack": ["Clean","FGSM","PGD","PGD_L2","Deepfool","CW","AA"],
     "target_attack": [true,false],
