--- a/Code/train_config.json
+++ b/Code/train_config.json
@@ -1,15 +1,15 @@
 {
-    "dataset": "CIFAR100",
+    "dataset": "CIFAR10",
     "model": "ConvNet",
-    "method": "IDM",
-    "ipc": "1",
+    "method": "BACON",
+    "ipc": "50",
     "dsa_strategy": "color_crop_cutout_flip_scale_rotate",
     "syn_ce": true,
     "ce_weight": 1,
     "aug": true,
-    "data_file": "/home/node/BACON/Code/evaluation/data_pool/IDM/IDM_cifar100_ipc1_conv.pt",
-    "save_path": "/home/node/BACON/Code/evaluation/model_pool/IDM/AT/",
-    "train_attack": "PGD",
+    "data_file": "./dataset_pool/BACON/BACON_cifar10_ipc50_conv.pt",
+    "save_path": "./model_pool/BACON/",
+    "train_attack": "None",
     "target_attack": false,
     "test_attack": "None",
     "src_dataset": false
